@@ -1,3 +1,8 @@
+2006-10-05  Aaron Stone  <aaron@serendipity.cx>
+
+	* serverchild.c:
+	Implement "self-pipe trick" to prevent signal races with select(2).
+
 2006-10-04  Aaron Stone  <aaron@serendipity.cx>
 
 	* dbmail-message.h, dbmail-message.c:
